--- a/docs/.vitepress/theme/style.css
+++ b/docs/.vitepress/theme/style.css
@@ -2,7 +2,8 @@
   --vp-home-hero-name-color: transparent;
   --vp-home-hero-name-background: -webkit-linear-gradient( 120deg, #209fb5 30%, #74c7ec );
   --vp-home-hero-image-background-image: linear-gradient( -45deg, #209fb5 50%, #74c7ec 50% );
-  --vp-home-hero-image-filter: blur(44px)
+  --vp-home-hero-image-filter: blur(44px);
+   --vp-code-copy-copied-text-content: '¡Copiado!'
 }
 @media (min-width: 640px) {
   :root {
@@ -17,4 +18,18 @@
 .VPHero .VPImage {
   filter:drop-shadow(-2px 4px 6px rgba(0,0,0,.2));
   padding:18px
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap');
+
+:root {
+  --vp-font-family-mono: "Fira Code";
+  font-feature-settings: "cv02" 1, "ss01" 1, "zero" 1, "ss05" 1, "ss03" 1, "cv29" 1, "cv30" 1, "ss02" 1, "cv19" 1, "cv23" 1, "ss08" 1, "cv24" 1, "ss09" 1, "cv25" 1, "cv26" 1, "cv32" 1, "cv28" 1, "ss07" 1;
+}
+
+.reset::before {
+  content: "Reiniciar (";
+}
+.reset::after {
+  content: ")";
 }
